--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 	<div id="demo" >
 	</div>
 	<script type="text/javascript">
+		// 設定高度給#demo
+		// set height for #demo
 		$('#demo').height($(window).height());
-		$.jkrolling.apply($('#demo'), './demo.jpg', {
-			sliceNum : 300, // 切片數量
+
+		// 啟用 JKRolling
+		// enable JKRolling
+		$.jkrolling.apply( $('#demo'), './demo.jpg', {
+			sliceNum : 300, // 切片數量 | set slice num (for more smooth)
 			centerKeepRange : 0.2, // 中間保留範圍
 			rollingDeep : 0.5, // 滾動深度
 			rollingType : $.jkrolling.type_roller // 滾動類型
