--- a/test_developer.html
+++ b/test_developer.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link href="./style.css" rel="stylesheet" type="text/css" />
-	<script type="text/javascript" src="./jquery-1.11.3.min.js" ></script>
+	<script type="text/javascript" src="./res/jquery-1.11.3.min.js" ></script>
 	<script type="text/javascript" src="./jkrolling.js" ></script>
 </head>
 <body>
