--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       <section id="main_content" class="inner">
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome use JK Rolling. / 歡迎使用JK-Rolling</h3>
+<p>This is plugin can for single page, let you have a cool rolling effect or rolling animate. base on <a href="http://jquery.com" target="_blank">JQuery</a></p>
+<p>這是一個適用於單頁網頁滾動的特效與動化插件(使用<a href="http://jquery.com" target="_blank">JQuery</a>)</p>
+
 
 <p>Below is Example<br />下面是範例：</p>
 <ul>
