--- a/test_developer.html
+++ b/test_developer.html
@@ -16,7 +16,7 @@
 
 		// 啟用 JKRolling
 		// enable JKRolling
-		$.jkrolling.apply( $('#demo'), './demo.jpg', {
+		$.jkrolling.apply( $('#demo'), './images/demo.jpg', {
 			sliceNum : 300, // 切片數量 | set slice num (for more smooth)
 			centerKeepRange : 0.2, // 中間保留範圍
 			rollingDeep : 0.5, // 滾動深度
